Add ChromeVox activation key combo as reserved key combo

- Android app may consume ChromeVox activation key combo. Add the key
  combo (Ctrl+Alt+Z) as a Chrome OS reserved key combo.

Bug: b/121100170
Bug: 914684
Test: Tested as described in crbug.
Change-Id: I9ad69ef726a09fb0d18defc88357f7c696a0d7f8
Reviewed-on: https://chromium-review.googlesource.com/c/1381322
Reviewed-by: Mitsuru Oshima <oshima@chromium.org>
Commit-Queue: Yuki Awano <yawano@chromium.org>
Cr-Commit-Position: refs/heads/master@{#617674}
Former-commit-id: 3da77ca73813b9a2699ff1135c869f9f94681603